add personal rusume

--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Ernest's Blog =)
-tagline: Site Tagline
+title : Ernest's blog
+tagline: 
 author :
   name : Ernest
   email : 258513813@qq.com
